samples/_failures_safe/1761441577_8034d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b7ccd9c.c: In function ‘main’:
./samples/SAFE/__tmp_9b7ccd9c.c:162:12: error: missing terminating " character
  162 |     printf("\nFirst matrix:\n
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9b7ccd9c.c:162:5: error: expected expression at end of input
  162 |     printf("\nFirst matrix:\n
      |     ^~~~~~
./samples/SAFE/__tmp_9b7ccd9c.c:162:5: error: expected declaration or statement at end of input
